@@ -3,6 +3,17 @@
 The experimental branch contains the latest development builds and feature updates of the project. This contains untested and/or incomplete code and project attributes and should not be used as release versions. The testing versions will be found in the "dev" branch.
 
 # Version History
+
+# Development Version 0.0.2b:
+
+10/21/2022:
+Updated Serial class to interface with controls class.
+
+# Development Version 0.0.2a:
+
+10/20/2022:
+Created controls class.
+
 # Development Version 0.0.1d:
 
 10/20/2022:
