@@ -12,14 +12,22 @@
 // Define Controls Class
 class Controls {
 public:
+    // Public Variables
+    bool isActive;
+    
+    // Public Functions
     Controls(); // Contructor
     double readControlInput();
     void setDeflection(double delta); // Set the control deflection
     double getDeflection(); // Output the deflection amount for indicating deflections
     ~Controls(); // Destructor
 private:
+    // Private Variables
     double controlInput; // Variable to store the control input
-    double deflection; // Variable to store deflection
+    char deflection; // Variable to store deflection
+    
+    // Private Functions
+    // TODO: Add private functions if needed
 };
 
 #endif
