@@ -1,5 +1,5 @@
-// Serial UART Class V1.1
-// Daniel Duhon, 10/19/2021
+// Serial UART Class V2.0
+// Daniel Duhon, 10/21/2022
 // Serial Class
 
 #ifndef SERIAL_H
@@ -26,13 +26,43 @@ namespace Shire {
         void writeSerial(char data); // Public write to serial function
         char getSerialData(); // Retrieve whatever is stored in "serialDataIn" from reading
         int getNumberRead(); // Read how many bytes were received
+        
+        // Interact with I/O variables
+        void setElevatorDeflection(double deltaE);
+        double getElevatorDeflection();
+        void setAileronDeflection(double deltaA);
+        double getAileronDeflection();
+        void setRudderDeflection(double deltaR);
+        double getRudderDeflection();
+        void setThrottle(double deltaT);
+        double getThrottle();
+        
+        // Get status messages
+        bool checkElevatorStatus();
+        bool checkAileronStatus();
+        bool checkRudderStatus();
+        bool checkThrottleStatus();
+        
         ~Serial(); // Destructor
     private:
+        // Serial Variables
         char * serialPortDir;
         int serialPort; // Serial port
         int numberRead;
         char serialDataOut; // Data to write to serial.
         char serialDataIn[]; // Data read from serial.
+        
+        // Input/Output variables
+        double elevator_deflection;
+        double aileron_deflection;
+        double rudder_deflection;
+        double throttle_setting;
+        
+        // Status variables
+        bool elevatorStatus;
+        bool aileronStatus;
+        bool rudderStatus;
+        bool throttleStatus;
     };
 }
 
